Report continuation - "contextualizacao" e "trans_dados"

--- a/report/main.tex
+++ b/report/main.tex
@@ -2,6 +2,7 @@
 \documentclass[11pt]{article}
 \usepackage[portuges]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{a4wide}
 \usepackage{graphicx}
 \usepackage[hidelinks]{hyperref}
 \usepackage[toc,page]{appendix}
