Protection mechanisms almost done.

--- a/report/main.tex
+++ b/report/main.tex
@@ -10,6 +10,7 @@
 \usepackage{float}
 \usepackage{indentfirst}
 \usepackage{subfiles}
+\usepackage{fancyvrb}
 
 \graphicspath{{images/}{../images/}}
 
