Typo fix in report

--- a/report/main.tex
+++ b/report/main.tex
@@ -136,7 +136,7 @@ O cabeçalho é constituído por quatro \textit{bytes}, cada um dos quais indica
     \item O byte Instruction (INS), que especifica exatamente qual comando será processado. Existe uma variedade de comandos providenciados pela norma ISO/IEC 18013-2. Para além dos comandos especificados na norma, é especificado um comando adicional UPDATE BINARY, que atualiza o ficheiro EF.GroupAccess.%Há 40 comandos na norma mais o UPDATE BINARY, põe-se nos anexos?
 
     \item Os bytes Parameter 1 e 2 (P1 e P2), que indicam controlos e opções para o processamento do comando.
-\begin{itemize}
+\end{itemize}
 
 
 \subsubsection{Grupos de dados}
