--- a/report/sections/trans_dados.tex
+++ b/report/sections/trans_dados.tex
@@ -3,7 +3,7 @@ Uma transação mDL consiste em três fases, sendo estas a inicialização, a co
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.95\textwidth]{../images/mDL_transaction.png}
+    \includegraphics[width=0.95\textwidth]{./images/mDL_transaction.png}
     \caption{Processo de transferência de dados de uma mDL}
     \label{fig:}
 \end{figure}
